# flair

./: pyproject.toml
master/: .buildinfo
master/.doctrees/: environment.pickle  index.doctree
master/.doctrees/api/: flair.data.doctree  flair.datasets.doctree  flair.doctree  flair.embeddings.doctree  flair.models.doctree  flair.nn.doctree  flair.splitter.doctree  flair.tokenization.doctree  flair.trainers.doctree  flair.trainers.plugins.doctree  index.doctree
master/.doctrees/api/datasets/: base.doctree  biomedical.doctree  document_classification.doctree  entity_linking.doctree  ocr.doctree  relation_extraction.doctree  sequence_labeling.doctree  text_image.doctree  text_text.doctree  treebanks.doctree
master/.doctrees/api/embeddings/: base.doctree  document.doctree  image.doctree  legacy.doctree  token.doctree  transformer.doctree
master/.doctrees/contributing/: index.doctree  local_development.doctree  making_a_pull_request.doctree  updating_documentation.doctree  writing_a_good_issue.doctree
master/.doctrees/legal-notice/: index.doctree
master/.doctrees/tutorial/: index.doctree  intro.doctree
master/.doctrees/tutorial/tutorial-basics/: basic-types.doctree  entity-linking.doctree  entity-mention-linking.doctree  how-predictions-work.doctree  how-to-tag-corpus.doctree  index.doctree  other-models.doctree  part-of-speech-tagging.doctree  tagging-entities.doctree  tagging-sentiment.doctree
master/.doctrees/tutorial/tutorial-embeddings/: classic-word-embeddings.doctree  embeddings.doctree  flair-embeddings.doctree  index.doctree  other-embeddings.doctree  transformer-embeddings.doctree
master/.doctrees/tutorial/tutorial-hunflair2/: customize-linking.doctree  index.doctree  linking.doctree  overview.doctree  tagging.doctree  training-ner-models.doctree
master/.doctrees/tutorial/tutorial-training/: how-model-training-works.doctree  how-to-load-custom-dataset.doctree  how-to-load-prepared-dataset.doctree  how-to-train-sequence-tagger.doctree  how-to-train-span-classifier.doctree  how-to-train-text-classifier.doctree  index.doctree  train-vs-fine-tune.doctree
